--- a/l10n-weblate/client-configuration/zh_CN.po
+++ b/l10n-weblate/client-configuration/zh_CN.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2023-02-06 09:14+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/uyuni/"
-"docs-client-configuration-manager-42-mu-4211/zh_CN/>\n"
+"docs-client-configuration-42/zh_CN/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2095,7 +2095,8 @@ msgid ""
 "network as the machine you want to install, or you have a DHCP relay that "
 "allows you to cross all routers in between;"
 msgstr ""
-"{productname} 服务器（或其代理之一）与您要安装的计算机位于同一本地网络中，或者您具有可用于跨越两者之间的所有路由器的 DHCP 中继；"
+"{productname} 服务器（或其代理之一）与您要安装的计算机位于同一本地网络中，或"
+"者您具有可用于跨越两者之间的所有路由器的 DHCP 中继；"
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-intro.adoc:13
@@ -2329,9 +2330,7 @@ msgstr "将您的 GPG 密钥复制到此目录中，并加上 [path]``.asc`` 后
 #: modules/client-configuration/pages/autoinst-owngpgkey.adoc:20
 #, no-wrap
 msgid "cp /srv/www/htdocs/pub/mgr-gpg-pub.key tftproot/usr/lib/rpm/gnupg/keys/mgr-gpg-pub.asc\n"
-msgstr ""
-"cp /srv/www/htdocs/pub/mgr-gpg-pub.key tftproot/usr/lib/rpm/gnupg/keys/mgr-"
-"gpg-pub.asc\n"
+msgstr "cp /srv/www/htdocs/pub/mgr-gpg-pub.key tftproot/usr/lib/rpm/gnupg/keys/mgr-gpg-pub.asc\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-owngpgkey.adoc:21
@@ -2383,9 +2382,7 @@ msgstr "mkdir -p initrdroot/usr/lib/rpm/gnupg/keys\n"
 #: modules/client-configuration/pages/autoinst-owngpgkey.adoc:29
 #, no-wrap
 msgid "cp /srv/www/htdocs/pub/mgr-gpg-pub.key initrdroot/usr/lib/rpm/gnupg/keys/mgr-gpg-pub.asc\n"
-msgstr ""
-"cp /srv/www/htdocs/pub/mgr-gpg-pub.key initrdroot/usr/lib/rpm/gnupg/keys/mgr-"
-"gpg-pub.asc\n"
+msgstr "cp /srv/www/htdocs/pub/mgr-gpg-pub.key initrdroot/usr/lib/rpm/gnupg/keys/mgr-gpg-pub.asc\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-owngpgkey.adoc:30
@@ -2396,8 +2393,7 @@ msgstr "使用 [command]``mksusecd`` 修改现有的 ISO 映像："
 #: modules/client-configuration/pages/autoinst-owngpgkey.adoc:31
 #, no-wrap
 msgid "mksusecd --create <new-image>.iso --initrd initrdroot/ <old-image>.iso\n"
-msgstr ""
-"mksusecd --create <new-image>.iso --initrd initrdroot/ <old-image>.iso\n"
+msgstr "mksusecd --create <new-image>.iso --initrd initrdroot/ <old-image>.iso\n"
 
 #. type: Title =
 #: modules/client-configuration/pages/autoinst-profiles.adoc:1
@@ -2425,7 +2421,8 @@ msgid ""
 "information in a scripted form.  This type of file is sometimes also "
 "referred to as an \"answers file.\""
 msgstr ""
-"配置文件最重要的部分是“自动安装文件”。手动执行安装时，必须向安装程序提供相关信息，例如分区和网络信息以及用户细节。您可以使用自动安装文件以脚本形式提供此"
+"配置文件最重要的部分是“自动安装文件”。手动执行安装时，必须向安装程序提供相关"
+"信息，例如分区和网络信息以及用户细节。您可以使用自动安装文件以脚本形式提供此"
 "类信息。这种类型的文件有时也称为“答案文件”。"
 
 #. type: Plain text
@@ -3313,7 +3310,9 @@ msgid ""
 "Alternatively, the installation can start automatically from one of the "
 "profiles without manual intervention.  This is called \"unattended "
 "provisioning.\""
-msgstr "安装也可以从其中一个配置文件自动启动，而无需手动干预。这称为“无人照管的置备”。"
+msgstr ""
+"安装也可以从其中一个配置文件自动启动，而无需手动干预。这称为“无人照管的置"
+"备”。"
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-pxeboot.adoc:16
@@ -4060,9 +4059,7 @@ msgstr ""
 #: modules/client-configuration/pages/automatic-client-registration.adoc:26
 #, no-wrap
 msgid "curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s\n"
-msgstr ""
-"curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash "
-"-s\n"
+msgstr "curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s\n"
 
 #. type: delimited block =
 #: modules/client-configuration/pages/automatic-client-registration.adoc:13
@@ -4422,9 +4419,7 @@ msgstr "指定适当的父通道："
 #: modules/client-configuration/pages/bootstrap-repository.adoc:33
 #, no-wrap
 msgid "mgr-create-bootstrap-repo -c SLE-15-x86_64 --with-parent-channel sle-product-sled15-pool-x86_64\n"
-msgstr ""
-"mgr-create-bootstrap-repo -c SLE-15-x86_64 --with-parent-channel sle-product-"
-"sled15-pool-x86_64\n"
+msgstr "mgr-create-bootstrap-repo -c SLE-15-x86_64 --with-parent-channel sle-product-sled15-pool-x86_64\n"
 
 #. type: Title ===
 #: modules/client-configuration/pages/bootstrap-repository.adoc:34
@@ -5753,11 +5748,8 @@ msgid ""
 msgstr ""
 " <listentry>\n"
 "     <ask_on_error config:type=\"boolean\">true</ask_on_error>\n"
-"     <media_url>https://$redhat_management_server/ks/dist/child/"
-"$channel_prefix-sle-module-web-scripting15-sp1-pool-x86_64/"
-"$distro_label</media_url>\n"
-"     <name>$channel_prefix SLE-Module-Web-Scripting15-SP1 Pool for x86_64 "
-"</name>\n"
+"     <media_url>https://$redhat_management_server/ks/dist/child/$channel_prefix-sle-module-web-scripting15-sp1-pool-x86_64/$distro_label</media_url>\n"
+"     <name>$channel_prefix SLE-Module-Web-Scripting15-SP1 Pool for x86_64 </name>\n"
 "     <product>Web Scripting Module 15 SP1 x86_64 Pool</product>\n"
 "</listentry>\n"
 
@@ -5840,8 +5832,7 @@ msgstr "使用您选择的配置文件构建 ISO 文件："
 #: modules/client-configuration/pages/client-upgrades-lifecycle.adoc:46
 #, no-wrap
 msgid "cobbler buildiso --iso=/tmp/SLE_15-sp1.iso --profiles=SLE_15-sp1:1:Example\n"
-msgstr ""
-"cobbler buildiso --iso=/tmp/SLE_15-sp1.iso --profiles=SLE_15-sp1:1:Example\n"
+msgstr "cobbler buildiso --iso=/tmp/SLE_15-sp1.iso --profiles=SLE_15-sp1:1:Example\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/client-upgrades-lifecycle.adoc:47
@@ -8120,9 +8111,7 @@ msgstr "在 [path]``/etc/rhn/rhn.conf`` 中添加或编辑下面一行："
 #: modules/client-configuration/pages/clients-centos.adoc:42
 #, no-wrap
 msgid "java.allow_adding_patches_via_api = centos7-updates-x86_64,centos7-x86_64,centos7-extras-x86_64\n"
-msgstr ""
-"java.allow_adding_patches_via_api = "
-"centos7-updates-x86_64,centos7-x86_64,centos7-extras-x86_64\n"
+msgstr "java.allow_adding_patches_via_api = centos7-updates-x86_64,centos7-x86_64,centos7-extras-x86_64\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/clients-centos.adoc:43
@@ -8187,8 +8176,7 @@ msgstr ""
 "rm *.xml\n"
 "wget -c http://cefs.steve-meier.de/errata.latest.xml\n"
 "#wget -c https://www.redhat.com/security/data/oval/com.redhat.rhsa-all.xml\n"
-"wget -c https://www.redhat.com/security/data/oval/com.redhat.rhsa-RHEL7.xml."
-"bz2\n"
+"wget -c https://www.redhat.com/security/data/oval/com.redhat.rhsa-RHEL7.xml.bz2\n"
 "bzip2 -d com.redhat.rhsa-RHEL7.xml.bz2\n"
 "wget -c http://cefs.steve-meier.de/errata-import.tar\n"
 "tar xvf errata-import.tar\n"
@@ -8196,8 +8184,7 @@ msgstr ""
 "export SPACEWALK_USER='<adminname>';export SPACEWALK_PASS='<password>'\n"
 "/usr/local/centos/errata-import.pl --server '<servername>' \\\n"
 "--errata /usr/local/centos/errata.latest.xml  \\\n"
-"--include-channels=centos7-updates-x86_64,centos7-x86_64,centos7-extras-"
-"x86_64 \\\n"
+"--include-channels=centos7-updates-x86_64,centos7-x86_64,centos7-extras-x86_64 \\\n"
 "--publish --rhsa-oval /usr/local/centos/com.redhat.rhsa-RHEL7.xml\n"
 
 #. type: Plain text
@@ -9292,9 +9279,7 @@ msgstr "Google Compute Engine："
 #: modules/client-configuration/pages/clients-pubcloud.adoc:18
 #, no-wrap
 msgid "zypper rm cloud-regionsrv-client-plugin-gce regionServiceClientConfigGCE regionServiceCertsGCE\n"
-msgstr ""
-"zypper rm cloud-regionsrv-client-plugin-gce regionServiceClientConfigGCE "
-"regionServiceCertsGCE\n"
+msgstr "zypper rm cloud-regionsrv-client-plugin-gce regionServiceClientConfigGCE regionServiceCertsGCE\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/clients-pubcloud.adoc:19
@@ -10464,14 +10449,11 @@ msgid ""
 "verify return+\n"
 msgstr ""
 "CONNECTED(00000003)\n"
-"depth=2 C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert "
-"Global Root G2\n"
+"depth=2 C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G2\n"
 "verify return:1\n"
-"depth=1 C = US, O = Microsoft Corporation, CN = Microsoft Azure TLS Issuing "
-"CA 06\n"
+"depth=1 C = US, O = Microsoft Corporation, CN = Microsoft Azure TLS Issuing CA 06\n"
 "verify return:1\n"
-"depth=0 C = US, ST = WA, L = Redmond, O = Microsoft Corporation, CN = rhui-1."
-"microsoft.com\n"
+"depth=0 C = US, ST = WA, L = Redmond, O = Microsoft Corporation, CN = rhui-1.microsoft.com\n"
 "verify return+\n"
 
 #. type: Plain text
@@ -10655,12 +10637,8 @@ msgid ""
 "echo \"X-RHUI-ID=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document|base64|tr -d '\\n')\"\n"
 "echo \"X-RHUI-SIGNATURE=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/signature|base64|tr -d '\\n')\"\n"
 msgstr ""
-"echo \"X-RHUI-ID=$(curl -s http://169.254.169.254/latest/dynamic/"
-"instance-identity/document|base64|tr -d '\\n"
-"')\"\n"
-"echo \"X-RHUI-SIGNATURE=$(curl -s http://169.254.169.254/latest/dynamic/"
-"instance-identity/signature|base64|tr -d '\\n"
-"')\"\n"
+"echo \"X-RHUI-ID=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document|base64|tr -d '\\n')\"\n"
+"echo \"X-RHUI-SIGNATURE=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/signature|base64|tr -d '\\n')\"\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/clients-rh-rhui.adoc:87
@@ -13062,9 +13040,10 @@ msgid ""
 "within the DMZ is authorized to open a connection to the internal network, "
 "including the {productname} Server."
 msgstr ""
-"在客户端无法直接访问 {productname} 服务器的环境中，将会采用通过 SSH 推送和通过 Salt SSH "
-"推送的方法。在此环境中，客户端位于受防火墙保护的区域，该区域称为 DMZ。DMZ 内的所有系统均无权打开连至内部网络（包括 {productname} "
-"服务器）的连接。"
+"在客户端无法直接访问 {productname} 服务器的环境中，将会采用通过 SSH 推送和通"
+"过 Salt SSH 推送的方法。在此环境中，客户端位于受防火墙保护的区域，该区域称为 "
+"DMZ。DMZ 内的所有系统均无权打开连至内部网络（包括 {productname} 服务器）的连"
+"接。"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-intro.adoc:5
@@ -13400,8 +13379,9 @@ msgid ""
 "authorized to open a connection to the internal network, including the "
 "{productname} Server."
 msgstr ""
-"通过 SSH 推送方法用于传统客户端无法直接访问 {productname} 服务器的环境。在此环境中，客户端位于受防火墙保护的区域，该区域称为 DMZ。"
-"DMZ 内的所有系统均无权打开连至内部网络（包括 {productname} 服务器）的连接。"
+"通过 SSH 推送方法用于传统客户端无法直接访问 {productname} 服务器的环境。在此"
+"环境中，客户端位于受防火墙保护的区域，该区域称为 DMZ。DMZ 内的所有系统均无权"
+"打开连至内部网络（包括 {productname} 服务器）的连接。"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-pushssh.adoc:3
@@ -13553,8 +13533,7 @@ msgid ""
 "#ALL    ALL=(ALL) ALL   # WARNING! Only use this together with 'Defaults targetpw'!\n"
 msgstr ""
 "#Defaults targetpw   # ask for the password of the target user i.e. root\n"
-"#ALL    ALL=(ALL) ALL   # WARNING! Only use this together with 'Defaults "
-"targetpw'!\n"
+"#ALL    ALL=(ALL) ALL   # WARNING! Only use this together with 'Defaults targetpw'!\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-pushssh.adoc:21
@@ -13816,9 +13795,7 @@ msgstr "可选：如果您需要编辑某个现有激活密钥，可以使用以
 #: modules/client-configuration/pages/contact-methods-pushssh.adoc:52
 #, no-wrap
 msgid "client.activationkey.setDetails(key, '1-mykey', {'contact_method' : 'ssh-push'})\n"
-msgstr ""
-"client.activationkey.setDetails(key, '1-mykey', {'contact_method' : 'ssh-"
-"push'})\n"
+msgstr "client.activationkey.setDetails(key, '1-mykey', {'contact_method' : 'ssh-push'})\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-pushssh.adoc:53
@@ -14343,10 +14320,7 @@ msgstr ""
 #: modules/client-configuration/pages/tshoot-clients.adoc:127
 #, no-wrap
 msgid "salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{\"mgr_purge_non_venv_salt_files\": True, \"mgr_purge_non_venv_salt\": True}'\n"
-msgstr ""
-"salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"
-"\"mgr_purge_non_venv_salt_files\": True, \"mgr_purge_non_venv_salt\": True}'"
-"\n"
+msgstr "salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{\"mgr_purge_non_venv_salt_files\": True, \"mgr_purge_non_venv_salt\": True}'\n"
 
 #. type: delimited block =
 #: modules/client-configuration/pages/contact-methods-saltbundle.adoc:20
@@ -14441,9 +14415,7 @@ msgstr ""
 #: modules/client-configuration/pages/tshoot-clients.adoc:131
 #, no-wrap
 msgid "web.ssh_salt_pre_flight_script = /usr/share/susemanager/salt-ssh/preflight.sh\n"
-msgstr ""
-"web.ssh_salt_pre_flight_script = /usr/share/susemanager/salt-ssh/preflight."
-"sh\n"
+msgstr "web.ssh_salt_pre_flight_script = /usr/share/susemanager/salt-ssh/preflight.sh\n"
 
 #. type: delimited block -
 #: modules/client-configuration/pages/contact-methods-saltbundle.adoc:30
@@ -14615,8 +14587,9 @@ msgid ""
 "authorized to open a connection to the internal network, including the "
 "{productname} Server."
 msgstr ""
-"通过 Salt SSH 推送方法用于 Salt 客户端无法直接访问 {productname} 服务器的环境。在此环境中，客户端位于受防火墙保护的区域，"
-"该区域称为 DMZ。DMZ 内的所有系统均无权打开连至内部网络（包括 {productname} 服务器）的连接。"
+"通过 Salt SSH 推送方法用于 Salt 客户端无法直接访问 {productname} 服务器的环"
+"境。在此环境中，客户端位于受防火墙保护的区域，该区域称为 DMZ。DMZ 内的所有系"
+"统均无权打开连至内部网络（包括 {productname} 服务器）的连接。"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-saltssh.adoc:3
@@ -14793,8 +14766,7 @@ msgid ""
 "taskomatic.com.redhat.rhn.taskomatic.task.SSHMinionActionExecutor.parallel_threads = <number>\n"
 "org.quartz.threadPool.threadCount = <value of parallel_threads + 20>\n"
 msgstr ""
-"taskomatic.com.redhat.rhn.taskomatic.task.SSHMinionActionExecutor.parallel_th"
-"reads = <number>\n"
+"taskomatic.com.redhat.rhn.taskomatic.task.SSHMinionActionExecutor.parallel_threads = <number>\n"
 "org.quartz.threadPool.threadCount = <value of parallel_threads + 20>\n"
 
 #. type: Plain text
@@ -14900,8 +14872,9 @@ msgid ""
 "authorized to open a connection to the internal network, including the "
 "{productname} Server."
 msgstr ""
-"通过 SSH 推送方法用于客户端无法直接访问 {productname} 服务器的环境。在此环境中，客户端位于受防火墙保护的区域，该区域称为 DMZ。"
-"DMZ 内的所有系统均无权打开连至内部网络（包括 {productname} 服务器）的连接。"
+"通过 SSH 推送方法用于客户端无法直接访问 {productname} 服务器的环境。在此环境"
+"中，客户端位于受防火墙保护的区域，该区域称为 DMZ。DMZ 内的所有系统均无权打开"
+"连至内部网络（包括 {productname} 服务器）的连接。"
 
 #. type: Plain text
 #: modules/client-configuration/pages/contact-methods-traditional.adoc:5
@@ -16268,8 +16241,7 @@ msgid ""
 "echo\n"
 "#exit 1\n"
 msgstr ""
-"echo \"Enable this script: comment (with #'s) this block (or, at least just\""
-"\n"
+"echo \"Enable this script: comment (with #'s) this block (or, at least just\"\n"
 "echo \"the exit below)\"\n"
 "echo\n"
 "#exit 1\n"
@@ -16283,8 +16255,7 @@ msgid ""
 "ACTIVATION_KEYS=1-sles15\n"
 "ORG_GPG_KEY=\n"
 msgstr ""
-"# can be edited, but probably correct (unless created during initial "
-"install):\n"
+"# can be edited, but probably correct (unless created during initial install):\n"
 "# NOTE: ACTIVATION_KEYS *must* be used to bootstrap a client machine.\n"
 "ACTIVATION_KEYS=1-sles15\n"
 "ORG_GPG_KEY=\n"
@@ -16349,9 +16320,7 @@ msgstr "或者，在客户端上运行以下命令："
 #: modules/client-configuration/pages/registration-bootstrap.adoc:46
 #, no-wrap
 msgid "curl -Sks https://server_hostname/pub/bootstrap/bootstrap-sles15.sh | /bin/bash\n"
-msgstr ""
-"curl -Sks https://server_hostname/pub/bootstrap/bootstrap-sles15.sh | /bin/"
-"bash\n"
+msgstr "curl -Sks https://server_hostname/pub/bootstrap/bootstrap-sles15.sh | /bin/bash\n"
 
 #. type: delimited block =
 #: modules/client-configuration/pages/registration-bootstrap.adoc:47
@@ -24793,8 +24762,7 @@ msgstr ""
 #: modules/client-configuration/pages/tshoot-clients.adoc:35
 #, no-wrap
 msgid "mirrorlist=http://mirrorlist.centos.org/?release=6&arch=$basearch&repo=os\n"
-msgstr ""
-"mirrorlist=http://mirrorlist.centos.org/?release=6&arch=$basearch&repo=os\n"
+msgstr "mirrorlist=http://mirrorlist.centos.org/?release=6&arch=$basearch&repo=os\n"
 
 #. type: Plain text
 #: modules/client-configuration/pages/tshoot-clients.adoc:36
