--- a/l10n-weblate/installation/zh_CN.po
+++ b/l10n-weblate/installation/zh_CN.po
@@ -7,16 +7,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2022-10-06 10:21+0000\n"
-"PO-Revision-Date: 2023-02-06 10:14+0000\n"
-=======
 "POT-Creation-Date: 2023-02-09 15:00+0000\n"
 "PO-Revision-Date: 2023-01-28 08:14+0000\n"
->>>>>>> 5331d2b1f (Automatic commit: update translation files)
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/uyuni/"
-"docs-installation-manager-42-mu-4211/zh_CN/>\n"
+"docs-installation-42/zh_CN/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6588,9 +6583,7 @@ msgstr ""
 #: modules/installation/pages/uyuni-server-setup.adoc:66
 #, no-wrap
 msgid "GRUB_CMDLINE_LINUX_DEFAULT=\"resume=/dev/sda1 splash=silent quiet showopts elevator=noop transparent_hugepage=never\"\n"
-msgstr ""
-"GRUB_CMDLINE_LINUX_DEFAULT=\"resume=/dev/sda1 splash=silent quiet showopts "
-"elevator=noop transparent_hugepage=never\"\n"
+msgstr "GRUB_CMDLINE_LINUX_DEFAULT=\"resume=/dev/sda1 splash=silent quiet showopts elevator=noop transparent_hugepage=never\"\n"
 
 #. type: Plain text
 #: modules/installation/pages/server-setup.adoc:71
