--- a/l10n-weblate/upgrade/zh_CN.po
+++ b/l10n-weblate/upgrade/zh_CN.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2023-02-06 09:14+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/uyuni/"
-"docs-upgrade-manager-42-mu-4211/zh_CN/>\n"
+"docs-upgrade-42/zh_CN/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
