Added instruction to make the existing procedure clearer.

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -240,6 +240,11 @@ Even manual patch synchronization affects all organization channels sharing the 
 .Procedure: Building a Content Lifecycle Project
 
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and select the project you want to build.
++
+[NOTE]
+====
+Mke sure you have the environment available before building the project.
+====
 . Review the attached sources and filters, and click btn:[Build].
 . Provide a version message to describe the changes or updates in this build.
 . You can monitor build progress in the [guimenu]``Environment Lifecycle`` section.
