--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -11,6 +11,7 @@ In such case, the images can be copied from {suse} registry to an internal regis
 
 
 This example illustrates deployment of {salt} proxies only.
+Machines must have access to [literal]``registry.suse.com``.
 
 .Procedure: Deploying {salt} Proxy from an internal image registry
 [role=procedure]
