Containerized proxy - copying images to internal registry (#1981)
* New containerized proxy procedure.

* Added fixes following the initial feedback.

* Minor fixes.

* Minor fix.

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Ricardo Mateus <rjmateus@gmail.com>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Ricardo Mateus <rjmateus@gmail.com>

* Further fixes.

* Typo.

* Typo.

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Ricardo Mateus <rjmateus@gmail.com>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Cedric Bosdonnat <cbosdonnat@suse.com>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Cedric Bosdonnat <cbosdonnat@suse.com>

* Changes added based on PR reviews so far.

* Comments deleted.

* Further fixes and clarificiations following the review.

* Fixes and additional instructions.

* Moved admonition to a better place.

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-a

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -86,6 +86,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 **** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
+**** xref:containerized-proxy-deployment.adoc[Containerized Proxy Deployment]
 ** xref:upgrade-intro.adoc[Upgrade]
 
 ifeval::[{suma-content} == true]
