--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -1,10 +1,15 @@
 [[clients-rh-rhui]]
 = Registering {rhel} Clients with RHUI
 
+// SUSE Liberty Linux not available at Uyuni for now
+
+ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
+endif::[]
+
 This section contains information about using {redhat} update infrastructure (RHUI) to register traditional and Salt clients running {rhel} operating systems.
 
-Traditional clients are available on {rhel}{nbsp}6 and 7 only.
+Traditional clients are available on {rhel}{nbsp}7 only.
 {rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
 
 If you are running your clients in a public cloud, such as Amazon EC2, use this method.
@@ -12,11 +17,15 @@ If you are running your clients in a public cloud, such as Amazon EC2, use this 
 It is possible to use RHUI in conjunction with the {redhat} content delivery network (CDN) to manage your {rhel} subscriptions.
 For information about using {redhat} CDN, see xref:client-configuration:clients-rh-cdn.adoc[].
 
-
-
 [IMPORTANT]
 ====
+
+// SUSE Liberty Linux not available at Uyuni for now
+
+ifeval::[{suma-content} == true]
 {rhel} clients are based on {redhat} and are unrelated to {sleses}, RES, or {sles}.
+endif::[]
+
 You are responsible for connecting {productname} Server to the {redhat} update infrastructure.
 All clients that get updates using this RHUI certificate need to be correctly licensed, please check with your cloud provider and the {redhat} terms of service for more information.
 ====
@@ -76,11 +85,12 @@ cp /etc/pki/rhui/content-<version>.key /<example>/entitlement/
 Azure:
 +
 * Check the certificate chain using the command:
++
 ----
 openssl s_client -connect rhui-1.microsoft.com:443 -showcerts
 ----
 +
-A sample output will look like the following:
+* A sample output will look like the following:
 +
 ----
 CONNECTED(00000003)
@@ -118,7 +128,7 @@ cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 +
 Azure:
 +
-Upload the converted certifcate to /<example>/entitlement
+* Upload the converted certifcate to /<example>/entitlement
 +
 Google Cloud Platform:
 +
@@ -178,10 +188,22 @@ The products you need for this procedure are:
 .Red Hat Products - WebUI
 |===
 
+// SUSE Liberty Linux not available at Uyuni for now
 | OS Version | Product Name
+ifeval::[{uyuni-content} == true]
+| {redhat} 9 | RHEL
+| {redhat} 8 | RHEL or CentOS 8 Base
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 | {redhat} 9 | RHEL and Liberty 9 Base
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
 | {redhat} 7 | RHEL7 Base x86_64
+
 |===
 
 
@@ -218,16 +240,6 @@ The channels you need for this procedure are:
 | rhel-x86_64-server-7
 | -
 | res7-suse-manager-tools-x86_64
-
-//| {redhat} 8
-//| rhel8-pool-x86_64
-//| -
-//| res8-manager-tools-pool-x86_64
-
-//| {redhat} 9
-//| el9-pool-x86_64
-//| -
-//| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
 
 |===
 
@@ -286,7 +298,6 @@ In such a case, repeat the procedure to get the new HTTP headers in place.
 ====
 
 
-
 == Prepare Custom Repositories and Channels
 
 To mirror the software from RHUI, you need to create custom channels and repositories in {productname} that are linked to RHUI by a URL.
@@ -333,12 +344,22 @@ The channels you need for this procedure are:
 .Red Hat Custom Channels
 |===
 
+// SUSE Liberty Linux not available at Uyuni for now
 | OS Version | Base Product          | Base Channel
-| {redhat} 9 | RHEL and Liberty 9 Base          | el9-pool-x86_64
+ifeval::[{suma-content} == true]
+| {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+| {redhat} 9 | RHEL | el9-pool-x86_64
+| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
-//| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
-//| {redhat} 9 | RHEL and Liberty 9 Base          | el9-pool-x86_64
+
 |===
 
 
@@ -385,14 +406,6 @@ Synchronization can sometimes take several hours.
 ====
 
 
-
-//ifeval::[{uyuni-content} == true]
-//== Trust GPG Keys on Clients
-
-//include::snippets/trust_gpg.adoc[]
-
-//endif::[]
-
 == Manage GPG Keys
 
 Clients use GPG keys to check the authenticity of software packages before they are installed.
@@ -402,12 +415,10 @@ Only trusted software can be installed on clients.
 ====
 Trusting a GPG key is important for security on clients.
 It is the task of the administrator to decide which keys are needed and can be trusted.
-A software channel cannot be assigned to a client when the GPG key is not trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
 ====
 
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
-
-
 
 
 == Register Clients
@@ -421,4 +432,3 @@ mgr-create-bootstrap-repo
 ----
 
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
-
