--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -243,7 +243,7 @@ Even manual patch synchronization affects all organization channels sharing the 
 +
 [NOTE]
 ====
-Mke sure you have the environment available before building the project.
+Make sure you have the environment available before building the project.
 ====
 . Review the attached sources and filters, and click btn:[Build].
 . Provide a version message to describe the changes or updates in this build.
