problem with register deleted clients anew (#2089)
* problem with register deleted clients anew
https://github.com/uyuni-project/uyuni-docs/issues/2076

* result of running ./update-cfg-files

* Update tshoot-delclients.adoc

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -87,6 +87,7 @@ endif::[]
 *** xref:troubleshooting/tshoot-passing-grains-to-start-event.adoc[Passing Grains to a Start Event]
 *** xref:troubleshooting/tshoot-proxy-connections-and-fqdns.adoc[Proxy Connections and FQDN]
 *** xref:troubleshooting/tshoot-registerclones.adoc[Registering Cloned Clients]
+*** xref:troubleshooting/tshoot-delclients.adoc[Registering Deleted Clients]
 *** xref:troubleshooting/tshoot-reg-from-webui-fails-no-errors.adoc[Registration from {webui} fails and does not show any errors]
 *** xref:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[Registering Traditional Client as Salt minion After Deleting]
 *** xref:troubleshooting/tshoot-registertradrhel.adoc[Registering Traditional RHEL Clients]
