Added extra info about eval comamnd parameter.

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -184,6 +184,12 @@ You can also use the {productname} API to schedule regular scans.
   Path to XCCDF document: /usr/share/xml/scap/ssg/content/ssg-sle15-ds-1.2.xml
 ----
 +
+[NOTE]
+====
+If you use [literal]``--fetch-remote-resources`` parameter a lot of RAM is required.
+In addition, you may need to increase the value of [literal]``file_recv_max_size``.
+====
++
 . The scan runs at the client's next scheduled synchronization.
 
 
