--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -94,8 +94,8 @@ a simple package remove cannot be used. The ptf package is not selectable in the
 
 [NOTE]
 ====
-Removing PTFs requires a special version of libzypp/zypper to be installed on the client system.
-Check ``zypper --help`` if the command ``removeptf`` is supported.
+Removing PTFs requires a special version of [literal]``libzypp`` and [literal]``zypper`` to be installed on the client system.
+Check [command]``zypper --help`` whether [command]``removeptf`` is supported.
 The ``List/Remove`` tab is only visible if this condition is met.
 ====
 
