--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -26,6 +26,10 @@ image::provision-config-keys.png[scaledwidth=80%]
 
 
 
+== Creating Activation Keys
+
+To create an activation key:
+
 .Procedure: Creating an Activation Key
 . In the {productname} {webui}, as an administrator, navigate to menu:Systems[Activation Keys].
 . Click the btn:[Create Key] button.
@@ -35,8 +39,10 @@ image::provision-config-keys.png[scaledwidth=80%]
 +
 [IMPORTANT]
 ====
-Do not use commas in the [guimenu]``Key`` field for any {suse} products.
+* Do not use commas or double quotes in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
+
+* If the string is empty, a random one is generated.
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
