--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -42,7 +42,7 @@ To create an activation key:
 * Do not use commas or double quotes in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
 
-* If the string is empty, a random one is generated.
+* If the field is left empty, a random string is generated.
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
