add sle-micro 5.1 to the intro text

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,9 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.2, and 5.3 {x86_64}
-* {micro}{nbsp}5.2, and 5.3 {arm64}
-* {micro}{nbsp}5.2, and 5.3 {zsystems} (s390x)
+* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
 
 
 [WARNING]
