slemicro esp. 5.1 re-adding https://github.com/SUSE/spacewalk/issues/20221

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,9 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.2, and 5.3 {x86_64}
-* {micro}{nbsp}5.2, and 5.3 {arm64}
-* {micro}{nbsp}5.2, and 5.3 {zsystems} (s390x)
+* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
 
 
 [WARNING]
@@ -179,16 +179,6 @@ include::snippets/check_sync_cli.adoc[]
 
 
 == Register Clients
-
-////
-To register your {micro} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
-
-----
-mgr-create-bootstrap-repo
-----
-////
 
 [WARNING]
 ====
