--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,9 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.2, and 5.3 {x86_64}
-* {micro}{nbsp}5.2, and 5.3 {arm64}
-* {micro}{nbsp}5.2, and 5.3 {zsystems} (s390x)
+* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
 
 
 [WARNING]
@@ -34,7 +34,6 @@ Before you register {micro} clients to your {productname} Server, you need to ad
 
 include::snippets/arch-other-note.adoc[]
 
-ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
 [[slemicro-channels-wizard]]
@@ -44,6 +43,15 @@ The products you need for this procedure are:
 
 | OS Version
 | Product Name
+
+| {micro} 5.1 {x86_64}
+| SUSE Linux Enterprise Micro 5.1 x86_64
+
+| {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
+
+| {micro} 5.1 {s390x}
+| SUSE Linux Enterprise Micro 5.1 s390x
 
 | {micro} 5.2 {x86_64}
 | SUSE Linux Enterprise Micro 5.2 x86_64
@@ -81,6 +89,18 @@ The channels you need for this procedure are:
 | Base Channel
 | Updates Channel
 
+| {micro} 5.1 {x86_64}
+| suse-microos-5.1-pool-x86_64
+| suse-microos-5.1-updates-x86_64
+
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-aarch64
+| suse-microos-5.1-updates-aarch64
+
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
+
 | {micro} 5.2 {x86_64}
 | suse-microos-5.2-pool-x86_64
 | suse-microos-5.2-updates-x86_64
@@ -109,10 +129,6 @@ The channels you need for this procedure are:
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
-endif::[]
-
-
-
 ifeval::[{uyuni-content} == true]
 
 To add the client tools, add these channels from the command prompt:
@@ -125,14 +141,14 @@ To add the client tools, add these channels from the command prompt:
 | OS Version
 | Client Channel
 
-| {micro} 5.3
-| sle-micro-5.3-uyuni-client
+| {micro} 5.1
+| suse-microos-5.1-uyuni-client
 
 | {micro} 5.2
 | suse-microos-5.2-uyuni-client
 
-| {micro} 5.1
-| suse-microos-5.1-uyuni-client
+| {micro} 5.3
+| sle-micro-5.3-uyuni-client
 
 |===
 
@@ -163,16 +179,6 @@ include::snippets/check_sync_cli.adoc[]
 
 
 == Register Clients
-
-////
-To register your {micro} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
-
-----
-mgr-create-bootstrap-repo
-----
-////
 
 [WARNING]
 ====
