--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -14,7 +14,10 @@ endif::[]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
 *** xref:supported-features-es.adoc[SLES-ES Supported Features]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
-
+// openSUSE Leap Micro not available at SUSE Manager for now
+ifeval::[{uyuni-content} == true]
+*** xref:supported-features-opensuse-leap-micro.adoc[openSUSE Leap Micro Supported Features]
+endif::[]
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-alibaba.adoc[Alibaba Cloud Linux Supported Features]
 endif::[]
@@ -52,9 +55,9 @@ endif::[]
 **** xref:clients-sleses.adoc[Expanded Support Clients]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
-
+// openSUSE Leap Micro not available at SUSE Manager for now
 ifeval::[{uyuni-content} == true]
-**** xref:clients-microos.adoc[openSUSE MicroOS]
+**** xref:clients-opensuseleapmicro.adoc[openSUSE Leap Micro Clients]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
