Added back the missing guidelines.

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -35,8 +35,12 @@ image::provision-config-keys.png[scaledwidth=80%]
 +
 [IMPORTANT]
 ====
-Do not use commas in the [guimenu]``Key`` field for any {suse} products.
+* Do not use commas or double quotes in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
+
+* All other characters are allowed, but `<> (){}` (this includes the space) are removed automatically.
+
+* If the field is left empty, a random string is generated.
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
