remove opensuse microos https://github.com/SUSE/spacewalk/issues/20162 https://github.com/uyuni-project/uyuni-docs/pull/2088

--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -1,12 +1,11 @@
 [[supported-features-sle-micro]]
-= Supported {micro} and {opensuse}{nbsp}{microos} Client Features
+= Supported {micro} Client Features
 
 
 [IMPORTANT]
 ====
 The operating system you run on a client is supported by the organization that supplies the operating system.
 {micro} is supported by {suse}.
-{opensuse}{nbsp}{microos} is supported by the {suse} community.
 ====
 
 
@@ -19,180 +18,137 @@ The icons in this table indicate:
 * {salt} the feature is supported only on Salt clients.
 
 
-[cols="1,1,1", options="header"]
-.Supported Features on {micro} and {opensuse}{nbsp}{microos} Operating Systems
+[cols="1,1", options="header"]
+.Supported Features on {micro} Operating Systems
 |===
 
 | Feature
 | {micro}
-| {opensuse}{nbsp}{microos}
 
 | Client
-| {salt}
 | {salt}
 
 | Operating system packages
 | {salt}
-| {salt}
 
 | Registration
-| {salt}
 | {salt}
 
 | Install packages
 | {salt}
-| {salt}
 
 | Apply patches (requires CVE ID)
-| {salt}
 | {salt}
 
 | Remote commands
 | {salt}
-| {salt}
 
 | System package states
-| {salt}
 | {salt}
 
 | System custom states
 | {salt}
-| {salt}
 
 | Group custom states
-| {salt}
 | {salt}
 
 | Organization custom states
 | {salt}
-| {salt}
 
 | System set manager (SSM)
-| {salt}
 | {salt}
 
 | Product migration
 | {cross}
-| {salt}
 
 | Basic Virtual Guest Management {star}
 | {question}
-| {salt}
 
 | Advanced Virtual Guest Management {star}
 | {question}
-| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
 | {cross}
-| {salt}
 
 | Virtual Guest Installation (image template), as Host OS
 | {question}
-| {salt}
 
 | System deployment (PXE/Kickstart)
 | {question}
-| {salt}
 
 | System redeployment (Kickstart)
 | {cross}
-| {salt}
 
 | Contact methods
-| {salt}: ZeroMQ
 | {salt}: ZeroMQ
 
 | Works with {productname} Proxy
 | {salt}
-| {salt}
 
 | Action chains
-| {salt}
 | {salt}
 
 | Staging (pre-download of packages)
 | {question}
-| {question}
 
 | Duplicate package reporting
-| {salt}
 | {salt}
 
 | CVE auditing (requires CVE ID)
 | {salt}
-| {salt}
 
 | SCAP auditing
-| {question}
 | {question}
 
 | Package verification
 | {question}
-| {question}
 
 | Package locking
-| {salt}
 | {salt}
 
 | System locking
 | {question}
-| {question}
 
 | Maintenance Windows
-| {question}
 | {question}
 
 | System snapshot
 | {cross}
-| {cross}
 
 | Configuration file management
-| {salt}
 | {salt}
 
 | Snapshots and profiles
 | {salt}: Profiles supported, Sync not supported
-| {salt}: Profiles supported, Sync not supported
 
 | Power management
-| {salt}
 | {salt}
 
 | Monitoring server
 | {cross}
-| {cross}
 
 | Monitored clients
-| {salt}
 | {salt}
 
 | Docker buildhost
 | {cross}
-| {cross}
 
 | Build Docker image with OS
-| {cross}
 | {cross}
 
 | Kiwi buildhost
 | {cross}
-| {cross}
 
 | Build Kiwi image with OS
-| {salt}
 | {salt}
 
 | Recurring Actions
 | {salt}
-| {salt}
 
 | AppStreams
 | N/A
-| N/A
 
 | Yomi
-| {question}
 | {question}
 |===
 
