product migration support matrix updated

--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -72,7 +72,7 @@ The icons in this table indicate:
 | {salt}
 
 | Product migration
-| {cross}
+| {salt}
 | {salt}
 
 | Basic Virtual Guest Management {star}
