Fix: clarify requirement on uid

--- a/modules/administration/pages/auth-methods-sso.adoc
+++ b/modules/administration/pages/auth-methods-sso.adoc
@@ -43,8 +43,10 @@ Check your IdP documentation for instructions.
 
 [IMPORTANT]
 ====
-Your IdP must have a SAML:Attribute containing the username of the IdP user domain, called ``uid``.
-The ``uid`` attribute passed in the SAML:Attribute must be created in the {productname} user base before you activate single sign-on.
+The mapping between the IdP user and the {productname} user is specified in a SAML:Attribute.
+The SAML:Attribute must be configured in the IdP and must be passed to {productname} in the SAML authentication.
+The attribute must be named ``uid`` and must contain the {productname} user mapped to it after login.
+The {productname} must be created before you activate single sign-on.
 ====
 
 
